--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start:dev": "NODE_ENV=dev DEBUG=main,particle,api-route,login-route,lights-route,test-route,error-handlers nodemon src/app.js",
     "start:prod": "NODE_ENV=production node src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "Joe Carpenito",
   "license": "ISC",
